--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -179,9 +179,11 @@ input:focus{
     font-size: 56px;
 }
 .price_box{
+
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    background-color: var(--color4);
+    background-color: #fff;
     padding: 30px;
+    border: var(--color2) solid 4px;
 }
 .price_box h3{
     font-size: 40px;
@@ -239,10 +241,12 @@ input:focus{
      filter: brightness(0) invert(1);
 }
 .price_box.two .cta{
-    background-color: var(--color2);
+    background-color: #fff;
+    color: #000;
 }
 .price_box.two .cta:hover{
-    background-color: var(--color1);
+    background-color: var(--color2);
+    color: #fff;
 }
 
 /* facilities */
@@ -305,4 +309,192 @@ input:focus{
 .room ul li{
     background-color: var(--color3);
     padding: 0 10px;
+}
+
+
+/* Blog */
+.blogs{
+    background-color: var(--color3);
+}
+.blog .info{
+    position: relative;
+    padding-left: 50px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 15px 0;
+}
+.blog .info::before{
+    position: absolute;
+    left: 0px;
+    top: 50%;
+    content: '';
+    background-color: var(--color2);
+    height: 1px;
+    width: 40px;
+    transform: translateY(-50%);
+}
+.blog .info span:last-child{
+    position: relative;
+    padding-left: 10px;
+}
+.blog .info span:last-child:before{
+     position: absolute;
+     left: 0px;
+    top: 50%;
+    content: '';
+    background-color: var(--color2);
+    height: 6px;
+    width: 6px;
+    border-radius: 50px;
+    transform: translateY(-50%);
+}
+.blog .image{
+    position: relative;
+    overflow: hidden;
+    transition: all .5s ease;
+}
+.blog .image img{
+    transition: all .5s ease;
+}
+.blog .image:hover img{
+    scale: 1.1;
+    transition: all .5s ease;
+}
+.blog a{
+    color: #000;
+    text-decoration: none;
+}
+.blog a:hover{
+    color: var(--color1);
+}
+/* Testimonial */
+.testimonials{
+    background: url(/images/testimonial.jpg) center center no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    color: #fff;
+    position: relative;
+    z-index: 1;
+}
+.testimonials::before{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    content: '';
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+}
+.testimonials .box{
+    text-align: center;
+}
+.testimonials .box .copy{
+    font-size: 22px;
+    line-height: 1.2;
+    padding-top: 62px;
+}
+.testimonials .box .quote{
+    font-size: 90px;
+    font-family: var(--heading-font);
+    font-weight: bold;
+    line-height: 0;
+    display: block;
+}
+.testimonials .rating{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+.testimonials svg{
+    width: 15px;
+    fill: #ffc107;
+    stroke: #ffc107;
+}
+.testimonials .swiper-wrapper{
+    padding-bottom: 50px;
+}
+
+.swiper-pagination-bullet {
+  background-color: white!important;
+  opacity: 0.7!important;
+  width: 12px!important;
+  height: 12px!important;
+  transition: all 0.3s ease;
+}
+.swiper-pagination-bullet-active {
+  background: var(--color2)!important; 
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+/* Gallery */
+
+
+.gallery .image{
+    position: relative;
+}
+.gallery .image img{
+    object-fit: cover;
+    width: 100%;
+    height: 350px;
+}
+.gallery .image .copy{
+    position: absolute;
+    left: 0;
+    bottom: 50px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.gallery .image .copy span{
+    display: inline-block;
+    background: rgba(255,255,255,0.12);      /* translucent layer */
+  backdrop-filter: blur(10px) saturate(120%); /* blur the background behind */
+  -webkit-backdrop-filter: blur(10px) saturate(120%);
+  border: 1px solid rgba(255,255,255,0.18); /* thin frosted edge */
+  border-radius: 14px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.12);
+  padding: 18px 35px;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: var(--heading-font);
+  font-weight: bold;
+  font-size: 18px;
+  transition: all .5s ease;
+}
+.gallery .image:hover .copy span{
+    background-color: var(--color2);
+    transition: all .5s ease;
+}
+
+
+/* each room */
+.room_type{
+    background-color: var(--color3);
+}
+.room_type .swiper-wrapper{
+    padding-bottom: 60px;
+}
+.each_room ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap; 
+    margin-bottom: 20px;
+}
+.room_type .swiper-pagination-bullet{
+    background-color: #0000006b!important;
+}
+.room_type .swiper-pagination-bullet-active{
+    background-color: var(--color2)!important;
+}
+.each_room ul li {
+    flex: 0 0 50%; 
+    box-sizing: border-box; 
 }
