--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,6 +97,9 @@ img{
     /* border-bottom: #000 solid 2px; */
 }
 @media (min-width: 992px) {
+    .site_header .container{
+        max-width: 100%;
+    }
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 15px;
         padding-left: 15px;
@@ -174,7 +177,24 @@ input:focus{
     font-size: 18px;
     font-family: var(--heading-font);
 }
-
+@media only screen and (max-width:1192px){
+    .field{
+        gap: 15px;
+        padding-left: 0px;
+    }
+    .hero_form .cta{
+        width: 100%;
+        justify-content: center;
+        padding: 15px 15px;
+    }
+}
+@media only screen and (max-width:767px){
+    .field{
+        border-right: 0;
+        border: var(--color1) solid 1px;
+        padding: 4px 15px;
+    }
+}
 
 /* best resort */
 .best_resort span{
@@ -225,6 +245,7 @@ input:focus{
 .title h2{
     font-size: 56px;
 }
+
 .prices{
     background-color: var(--color3);
 }
@@ -291,6 +312,11 @@ input:focus{
     content: '';
     background-color: var(--color2);
     opacity: .95;
+}
+@media only screen and (max-width:992px){
+    .price_box.two{
+        margin-top: 0px;
+    }
 }
 .price_box.two ul li img{
      filter: brightness(0) invert(1);
@@ -376,7 +402,10 @@ input:focus{
     transform: translate(-50%, -50%);
     color: #fff;
     font-size: 22px;
-
+}
+.resort-feci .box img{
+    object-fit: cover;
+    width: 100%;
 }
 
 .rooms{
@@ -496,14 +525,14 @@ input:focus{
 }
 
 .swiper-pagination-bullet {
-  background-color: white!important;
+  background-color: var(--color2)!important;
   opacity: 0.7!important;
   width: 12px!important;
   height: 12px!important;
   transition: all 0.3s ease;
 }
 .swiper-pagination-bullet-active {
-  background: var(--color2)!important; 
+  background: var(--color1)!important; 
   opacity: 1;
   transform: scale(1.3);
 }
@@ -707,7 +736,16 @@ input:focus{
 .blog_info svg{
     height: 20px;
 }
+.blog_detail .content a{
+    color: var(--color1);
+    text-decoration: none;
+}
 .contact .address{
     background-color: var(--color3);
     padding: 30px;
+}
+@media only screen and (max-width: 767px){
+    .title h2, .best_resort h2{
+        font-size: 40px;
+    }   
 }
