--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,15 +97,16 @@ img{
     /* border-bottom: #000 solid 2px; */
 }
 @media (min-width: 992px) {
-    .site_header .container{
-        max-width: 100%;
-    }
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 15px;
         padding-left: 15px;
     }
 }
-
+@media only screen and (max-width: 1200px){
+    .site_header .container{
+        max-width: 100%;
+    }
+}
 
 /* Hero Home */
 .homeHero{
@@ -752,3 +753,28 @@ input:focus{
         font-size: 50px;
     }
 }
+
+/* Loading */
+.loading{
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.loader {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid var(--color2);
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1s linear infinite;
+}
+ @keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
