gallery page added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -778,3 +778,31 @@ input:focus{
     transform: rotate(360deg);
   }
 } 
+
+.masonry {
+  column-count: 3;   /* number of columns */
+  column-gap: 1rem;  /* spacing */
+}
+
+.masonry a {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.masonry img {
+  width: 100%;
+  display: block;
+  border-radius: 12px;
+}
+@media (max-width: 1024px) {
+  .masonry {
+    column-count: 2;
+  }
+}
+
+@media (max-width: 640px) {
+  .masonry {
+    column-count: 1;
+  }
+}
