gallery page updated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,10 @@
     --color4: #2b1b16;
     --space: 100px;
 }
-
+html{
+    scroll-behavior: smooth;
+  scroll-padding-top: 80px;
+}
 /* Body text uses Jost */
 body {
   font-family: var(--body-font), sans-serif;
@@ -110,7 +113,7 @@ img{
 
 /* Hero Home */
 .homeHero{
-    background: url(/images/hero1.jpg) left top no-repeat;
+    /* background: url(/images/hero1.jpg) left top no-repeat; */
     height:calc(100vh - 170px);
     display: flex;
     align-items: center;
@@ -780,14 +783,12 @@ input:focus{
 } 
 
 .masonry {
-  column-count: 3;   /* number of columns */
-  column-gap: 1rem;  /* spacing */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem; /* works perfectly */
 }
-
-.masonry a {
-  display: inline-block;
-  width: 100%;
-  margin-bottom: 1rem;
+.masonry img {
+  height: auto;
 }
 
 .masonry img {
@@ -797,12 +798,43 @@ input:focus{
 }
 @media (max-width: 1024px) {
   .masonry {
-    column-count: 2;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 640px) {
   .masonry {
-    column-count: 1;
+    grid-template-columns: repeat(1, 1fr);
   }
+}
+
+.gallery_tabs{
+    display: flex;
+    position: sticky;
+    top: 0px;
+    z-index: 11;
+    flex-wrap: wrap;
+}
+.gallery_tabs a{
+    text-decoration: none;
+    width: 100%;
+    background-color: var(--color1);
+    color: #fff;
+    padding: 15px 15px;
+    text-align: center;
+    font-size: 18px;
+    border-right: var(--color2) solid 1px;
+    transition: all .5s ease;
+    flex: 1 1 150px; 
+}
+.gallery_tabs a:last-child{
+    border-right: 0px;
+}
+.gallery_tabs a:hover{
+    background-color: var(--color2);
+}
+@media only screen and (max-width: 992px){
+    .gallery_tabs{
+        gap: 5px;
+    }
 }
