--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -340,12 +340,10 @@ input:focus{
     color: #000;
 }
 .highlights .box{
-    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
+    text-align: center;
     background-color: var(--color2);
     padding: 25px 25px;
     color: #fff;
-    /* border-left: #f6e1b3 solid 6px;
-    border-right: #f6e1b3 solid 6px; */
     height: 100%;
 }
 .highlights .box svg{
@@ -398,6 +396,7 @@ input:focus{
 }
 .resort-feci .box{
     position: relative;
+    height: 100%;
 }
 .resort-feci .box::before{
     position: absolute;
@@ -420,6 +419,7 @@ input:focus{
 .resort-feci .box img{
     object-fit: cover;
     width: 100%;
+    height: 100%;
 }
 
 .rooms{
@@ -654,11 +654,15 @@ input:focus{
 #nav-tab .nav-link{
     color: #000;
 }
+.fatured_amenities .nav-tabs{
+    gap: 0.5rem;
+}
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus{
     background-color: inherit;
     border: 0px;
-    border-bottom: #000 solid 2px;
-    color: #000;
+    color: #fff;
+    background-color: var(--color1);
+    box-shadow: inherit;
 }
 .nav-link:focus-visible{
     border: 0;
@@ -668,7 +672,8 @@ input:focus{
 .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link{
     background-color: inherit;
     border: 0px;
-    border-bottom: #000 solid 2px;
+    color: #fff;
+    background-color: var(--color1);
 }
 .fatured_amenities .info{
     padding-top: 30px;
@@ -681,6 +686,11 @@ input:focus{
     gap: 10px;
 }
 
+.tab_amenities{
+    display: flex;
+    column-gap: 40px;
+    flex-wrap: wrap;
+}
 /* footer */
 .site_footer{
     background-color: var(--color2);
@@ -824,6 +834,28 @@ input:focus{
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+
+.serial {
+  column-count: 3;
+  column-gap: 1rem; /* horizontal gap between columns */
+  row-gap: 1rem;
+}
+
+.serial .item {
+  break-inside: avoid;
+  margin-bottom: 1rem; /* vertical gap */
+  display: inline-block; /* ensure margin works inside columns */
+  width: 100%;
+  cursor: pointer;
+}
+@media (max-width: 1024px) {
+  .serial { column-count: 2; }
+}
+@media (max-width: 640px) {
+  .serial { column-count: 1; }
+}
+
 
 .gallery_tabs{
     display: flex;
