room page added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,9 @@ img{
 /* Hero Home */
 .homeHero{
     /* background: url(/images/hero1.jpg) left top no-repeat; */
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height:calc(100vh - 170px);
     display: flex;
     align-items: center;
@@ -912,4 +915,65 @@ input:focus{
     .gallery_tabs{
         gap: 5px;
     }
+}
+
+/* Single Swiper */
+.singleSwiper .swiper-slide img{
+    width: 100%;
+}
+.singleSwiper .swiper-button-next,
+.singleSwiper .swiper-button-prev {
+  background: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+}
+
+.singleSwiper .swiper-button-next::after,
+.singleSwiper .swiper-button-prev::after {
+  font-size: 16px;
+  color: #000; 
+  font-weight: bold;
+}
+
+.singleSwiper .swiper-button-prev {
+  left: 10px;
+}
+
+.singleSwiper .swiper-button-next {
+  right: 10px;
+}
+
+/* Base pagination style */
+.singleSwiper .swiper-pagination-bullet {
+  width: 8px!important; 
+  height: 8px!important;
+  background: rgba(255, 255, 255, 0.8)!important;
+  opacity: 1!important;            
+  margin: 0 4px !important;
+  transition: all 0.3s ease;
+}
+
+.singleSwiper .swiper-pagination-bullet-active {
+  background: #fff!important;
+  transform: scale(1.3)!important;
+}
+
+/* room page */
+.room-intro{
+    text-align: center;
+}
+.room-intro h2{
+    font-size: 2.5rem;
+}
+
+.roomsSlider .content{
+    background-color: var(--color2);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    padding: 2rem;
 }
