--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -320,6 +320,11 @@ input:focus{
     background-color: var(--color2);
     opacity: .95;
 }
+.price_box.two .note{
+    color: #fff;
+    position: relative;
+    z-index: 1;
+}
 @media only screen and (max-width:992px){
     .price_box.two{
         margin-top: 0px;
@@ -1043,4 +1048,47 @@ input:focus{
 }
 .room-card img{
     height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.package{
+    /* background: #EAEAEA; */
+/* background: linear-gradient(352deg,rgba(234, 234, 234, 1) 0%, rgba(249, 249, 249, 1) 100%); */
+
+}
+.package .title{
+    margin-bottom: 0px;
+}
+.package .rate{
+    font-size: 35px;
+    margin: 30px 0;
+}
+.package .rate small{
+    font-size: 20px;
+}
+.package ul{
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+.package ul svg{
+    color: #6b6b6b;
+    margin-right: 10px;
+}
+.package .timing{
+    margin-top: 30px;
+    position: relative;
+    padding-left: 40px;
+}
+.package .timing strong{
+    display: block;
+}
+.package .timing svg{
+    position: absolute;
+    left: 0px;
+    width: 30px;
+    height: 30px;
+    top: 5px;
+    color: #6b6b6b;
 }
