--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1053,9 +1053,7 @@ input:focus{
 }
 
 .package{
-    /* background: #EAEAEA; */
-/* background: linear-gradient(352deg,rgba(234, 234, 234, 1) 0%, rgba(249, 249, 249, 1) 100%); */
-
+    background-color: #e5d8d4;
 }
 .package .title{
     margin-bottom: 0px;
@@ -1071,15 +1069,17 @@ input:focus{
     list-style: none;
     margin: 0px;
     padding: 0px;
+    font-size: 17px;
 }
 .package ul svg{
-    color: #6b6b6b;
+    color: #7e3a27;
     margin-right: 10px;
 }
 .package .timing{
     margin-top: 30px;
     position: relative;
     padding-left: 40px;
+    font-size: 17px;
 }
 .package .timing strong{
     display: block;
@@ -1090,5 +1090,5 @@ input:focus{
     width: 30px;
     height: 30px;
     top: 5px;
-    color: #6b6b6b;
+    color: #7e3a27;
 }
