--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1120,7 +1120,6 @@ input:focus{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
   gap: 40px 20px;
-  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -1130,10 +1129,12 @@ input:focus{
   align-items: center;
 }
 
-.stat-item img {
+.stat-item svg {
   width: 50px;
   height: 50px;
+  stroke-width: 1.5px;
   margin-bottom: 15px;
+  color: var(--color2);
 }
 
 .stat-item h3 {
@@ -1147,4 +1148,48 @@ input:focus{
   font-size: 15px;
   color: #666;
   margin-top: 4px;
+}
+
+.village{
+    background-color: var(--color3);
+    padding: 30px 0;
+}
+.village .swiper{
+    border-radius: 10px;
+    overflow: hidden;
+}
+.village ul{
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+.village ul li{
+    position: relative;
+    padding-left: 25px;
+}
+.village ul li svg{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    stroke-width: 2px;
+    width: 15px;
+    color: var(--color2);
+}
+.amenities ul{
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+.amenities ul li{
+    padding: 10px 10px;
+    font-weight: bold;
+    background-color: var(--color3);
+    margin-bottom: 2px;
+}
+.amenities ul li svg{
+    width: 40px;
+    height: 40px;
+    stroke-width: 1.5px;
+    color: var(--color2);
+    margin-right: 10px;
 }
