--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -938,6 +938,8 @@ input:focus {
 /* Single Swiper */
 .singleSwiper .swiper-slide img {
   width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
 .singleSwiper .swiper-button-next,
 .singleSwiper .swiper-button-prev {
@@ -1539,4 +1541,42 @@ input:focus {
   background: rgba(0, 0, 0, 0.5);
   padding: 10px;
   border-radius: 5px;
+}
+/* Styling for BigLeftSlider */
+
+.big-left-slider {
+  width: 100%;
+  position: relative;
+}
+
+.slider-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  transition: all 0.5s ease; /* Smooth transition for sliding effect */
+}
+
+.main-image {
+  flex-grow: 1;
+  max-width: 50%;
+}
+
+.main-image img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 10px;
+}
+
+.small-image1 {
+  flex-shrink: 0;
+  width: 20%;
+}
+
+.small-image1 img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 10px;
 }
